# Hero

./: CMakeLists.txt  biicode.conf
example/: struct.cpp
include/hero/: attribute.h  empty.h  fill.h  filter.h  fold.h  for_each.h  join.h  map.h  pair.h  push_back.h  push_front.h  reverse_fold.h  size.h  struct.h  transform.h  tuple.h  zip.h
include/hero/detail/: algo.h  always_void.h  closure.h  ordered.h  unpack.h  unpack_zip.h  view.h  visit_overloads.h
test/: attribute.cpp  empty.cpp  filter.cpp  fold.cpp  for_each.cpp  join.cpp  map.cpp  op.h  pair.cpp  push_back.cpp  push_front.cpp  reverse_fold.cpp  size.cpp  struct.cpp  test.h  transform.cpp  tuple.cpp  zip.cpp
